...
    LaunchedEffect(Unit) {
        if (text.isEmpty()) focusRequester.requestFocus()
    }

    Box(modifier = modifier) {
        TextField(
            modifier = Modifier.testTag("search_input")
                .fillMaxWidth()
                .searchBarBorder()
                .onFocusEvent { focusState ->
                    isFocused = focusState.isFocused
                }.focusRequester(focusRequester),
            value = text,
...
                        )
                    }
                }
            },
            trailingIcon = {
                if (text.isNotEmpty()) {
                    IconButton(modifier = Modifier.testTag("bt_clear_input"),onClick = {
                        onValueChange("")
                        focusRequester.requestFocus()
                    }) {
                        Icon(
                            imageVector = Icons.Default.Close,
                            contentDescription = "Clear search",
...
